myApplication/frontend.yaml
apiVersion: apps/v1
kind: Deployment


metadata:
        name: frontend
        labels:
                app: frontend

spec:
        replicas: 3
        selector:
                matchLabels:
                        app: frontend
        template:
                metadata:
                        labels:
                                app: frontend
                spec:
                        containers:
                        - name: frontend
                          image: regmicmahesh/frontend:latest
                          ports:
                          - name: webport
                            containerPort: 80
