myApplication/items_api.yaml
apiVersion: v1
kind: Pod


metadata:
        name: items-api
        labels:
                app: items-api

spec:
        containers:
        - name: items-api
          image: regmicmahesh/items_api:latest
          command: ["./mock-items-api", "0.0.0.0:9001"]
          ports:
          - name: webport
            containerPort: 9001
