myApplication/messagebroker.yaml
apiVersion: apps/v1
kind: Deployment


metadata:
        name: messagebroker
        labels:
                app: messagebroker


spec:
        replicas: 1
        selector:
                matchLabels:
                        app: messagebroker
        template:
                metadata:
                        labels:
                                app: messagebroker
                spec:
                        containers:
                        - name: msgbroker
                          image: rabbitmq:3

                          ports:
                          - name: rabbitmq-port
                            containerPort: 5672
