myApplication/order_api.yaml
apiVersion: apps/v1
kind: Deployment


metadata:
        name: order-api
        labels:
                app: order-api

spec:
        replicas: 3
        selector:
                matchLabels:
                        app: order-api
        template: 
                metadata:
                        labels:
                                app: order-api
                spec:
                        containers:
                        - name: order-api
                          image: regmicmahesh/order_api:latest
                          command: ["./mock-order-api", "0.0.0.0:9000"]
                          ports:
                          - name: webport
                            containerPort: 9000
