myApplication/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
        name: frontend

spec:
        ports:
        - port: 80
        selector:
                app: frontend
        type: NodePort
