myApplication/items_api-service.yaml
apiVersion: v1
kind: Service
metadata:
        name: itemsapi

spec:
        ports:
        - port: 9001
        selector:
                app: items-api
        type: LoadBalancer
