myApplication/messagebroker-service.yaml
apiVersion: v1
kind: Service
metadata:
        name: messagebroker

spec:
        ports:
        - port: 5672
        selector:
                app: messagebroker
        type: LoadBalancer
