myApplication/order_api-service.yaml
apiVersion: v1
kind: Service
metadata:
        name: orderapi

spec:
        ports:
        - port: 9000
        selector:
                app: order-api
        type: NodePort
