myApplication/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: total-ingress

spec:
  rules:
    - host: order.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orderapi
                port:
                  number: 9000
    - host: details.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: itemsapi
                port:
                  number: 9001
    - host: website.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
